Fix spacing of footer buttons

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -9,6 +9,10 @@
 
   .c-social-buttons__button + .c-social-buttons__button {
     margin-left: 1rem;
+
+    @include from-up(large) {
+      margin-left: 0;
+    }
   }
 }
 
